--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -80,11 +80,11 @@
 
   .codes .deals_description{margin-bottom:15px;color:#616161;}
   .codes .card_wrap{margin:20px 0 0 0;}
-  .codes .card_wrap .card{border-bottom:1px solid #ccc;padding:20px 0;}
+  .codes .card_wrap .card{border-bottom:1px solid #ccc;padding:35px 0 50px 0;}
   .codes .card_wrap .dealofday{height:auto;}
   .codes .card_wrap .card .image_box{float:left;width:20%;height:167px;padding:1.5%;}
-  .codes .card_wrap .card .image_box img{width:100%;height:167px;object-fit:contain;}
-  .codes .card_wrap .card .image_box a{display:inline-block;}
+  .codes .card_wrap .card .image_box img{width:100%;object-fit:contain;height:100%;}
+  .codes .card_wrap .card .image_box a{display:inline-block;height:100%;}
   .codes .card_wrap .card .image_box .rating{}
   .codes .card_wrap .card .image_box .rating img{width:100px;height:22px;}
   .codes .card_wrap .card .image_box .rating p{margin-left:2%;font-size:13px;}
@@ -92,8 +92,8 @@
   .codes .card_wrap .card .image_box .dealtube button{vertical-align:middle;}
   .codes .card_wrap .card .image_box .dealtube button.text{color:#fff;margin-top:-3.5px;font-weight:bold;}
   .codes .card_wrap .card .image_box .dealtube img{width:25px;height:25px;margin-left:-3px;}
-  .codes .card_wrap .card .inner{font-weight:400;border-right:1px solid #ccc;border-left:1px solid #ccc;float:left;width:57%;padding:0 1.5%;}
-  .codes .card_wrap .card .inner .new_mark{color:#fff;background:#87c442;font-size:14px;padding:2px 5px;margin-right:7px;border-radius:7px;font-weight:bold;display:inline-block;}
+  .codes .card_wrap .card .inner{font-weight:400;border-right:1px solid #ccc;border-left:1px solid #ccc;float:left;width:57%;padding:0 1.5%;height:168px;}
+  .codes .card_wrap .card .inner .new_mark{color:#fff;background:#87c442;font-size:12px;padding:2px 5px;margin-right:7px;border-radius:7px;font-weight:bold;display:inline-block;}
   .codes .card_wrap .card .inner>.regular{color:#000;font-size:17px;border-bottom:2px solid #000;}
   .codes .card_wrap .card .inner>.regular>em{background:#000;padding:0 5px;color:#fff;}
   .codes .card_wrap .card .inner>.shipping_condition{display:block;font-size:12px;}
@@ -114,7 +114,7 @@
   .codes .card_wrap .card .inner>em>span{font-size:15px;color:#ccc;text-decoration:line-through;margin-left:5px;}
 
 
-  .codes .card_wrap .card .inner>.code_high{border:1px solid #ccc;padding:8px;position:relative;}
+  .codes .card_wrap .card .inner>.code_high{border:1px solid #ccc;padding:8px;position:relative;margin-top:10px;}
   .codes .card_wrap .card .inner>.code_high .extra_info{font-size:13px;}
 
   .codes .card_wrap .card .inner>.code_high>address{display:block;}
@@ -122,7 +122,9 @@
   .codes .card_wrap .card .inner>.code_high>address>.bestdeals{color:#000;}
   .codes .card_wrap .card .inner>.code_high>address>.amz_prime{color:#e47911;}
   .codes .card_wrap .card .inner>.code_high>address>.ori_price{color:#616161;font-size:15px;text-decoration:line-through;}
-  em.pcou{color:#08f;font-weight:700;}
+  em.pcou{color:#08f;display:block;font-size:12px;margin-top:3px;}
+  em.pcou a{color:#08f;}
+  .dp_tit a{color:#616161;}
 
   .codes .card_wrap .card .inner>.code_high>.admin{}
   .codes .card_wrap .card .inner>.code_high>.admin>ul{}
@@ -142,16 +144,17 @@
   .codes .card_wrap .card .inner>.code_high .tooltipurple .tooltip-content{background:#b400b4;}
 
   .codes .card_wrap .card .inner>.code_high>em{font-size:12px;color:#000;display:block;}
-  .codes .card_wrap .card .inner>.code_high>em.expired{background:#ff4d4d;color:#fff;display:inline-block;padding:5px 10px;border-radius:15px;float:right;}
+  .codes .card_wrap .card .inner>.code_high>em.expired{background:#ff4d4d;color:#fff;display:inline-block;padding:5px 10px;border-radius:15px;position:absolute;top:2px;right:2px;font-size:10px;}
 
   .codes .card_wrap .card .inner>.code_high>p{color:#616161;font-size:13px;display:inline;/*border-bottom:0.4em solid rgba(51,51,255,0.2);position:relative;*/}
   .codes .card_wrap .card .inner>.code_high .discounted{font-size:25px;margin-right:5px;font-weight:500;display:inline-block;}
   .codes .card_wrap .card .inner>.code_high .ori_price{color:#616161;font-size:15px;text-decoration:line-through;}
+  .codes .card_wrap .card .inner>.code_high span.via{margin:0 5px;}
   .codes .card_wrap .card .inner>.code_high>.mobile_code{display:none;}
   .codes .card_wrap .card .inner>.code_high>p>span{position:relative;top:0.4em;}
   .codes .card_wrap .card .inner>.code_high>p>span>strong{font-size:17px;color:#000;font-weight:500;}
   .codes .card_wrap .card .inner>.code_high>.ex_date{display:block;font-size:13px;color:#616161;margin-bottom:3px;}
-  .codes .card_wrap .card .inner>.code_high>.endtoday{font-size:12px;background:#ffa500;color:#fff;display:inline-block;padding:5px 10px;border-radius:15px;float:right;}
+  .codes .card_wrap .card .inner>.code_high>.endtoday{font-size:10px;background:#ffa500;color:#fff;display:inline-block;padding:5px 10px;border-radius:15px;position:absolute;top:2px;right:2px;}
   .codes .card_wrap .card .inner>.code_high>ul{}
   .codes .card_wrap .card .inner>.code_high>ul>li{margin-bottom:10px;}
   .codes .card_wrap .card .inner>.code_high>ul>li>p{font-size:17px;}
@@ -166,8 +169,8 @@
   .codes .card_wrap .card .inner>.code_high .info_wrap .box p{font-size:12px;margin:5px;color:#6d6e71;}
   .codes .card_wrap .card .inner>.code_high .info_wrap .box em{font-size:20px;}
 
-  .codes .card_wrap .card .deal_btn{float:left;width:20%;text-align:center;height:209.03px;position:relative;}
-  .codes .card_wrap .card .promo_btn{height:285.03px;}
+  .codes .card_wrap .card .deal_btn{float:left;width:20%;text-align:center;height:168px;position:relative;}
+  .codes .card_wrap .card .promo_btn{height:190px;}
   .codes .card_wrap .card .deal_btn a{text-decoration:none;color:#000;display:inline-block;font-family: 'Montserrat', sans-serif;font-weight:bold;border:3px solid #000;padding:10px 5px;width:80%;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);}
   .codes .card_wrap .card .deal_btn em{background:#000;color:#fff;padding:5px 11.7px;font-size:12.5px;}
   .codes .card_wrap .card .deal_btn em.stock_m{display:none;}
@@ -238,7 +241,7 @@
 
   .codes .card_wrap .card .inner{padding:0 0 10px 0;font-weight:400;position:relative;;}
   .codes .card_wrap .card .inner_top{margin-top:50px;position:relative;}
-  .codes .card_wrap .card .inner .new_mark{color:#fff;background:#87c442;font-size:14px;padding:4px 5px;border-radius:7px;font-weight:bold;position:absolute;right:0;}
+  .codes .card_wrap .card .inner .new_mark{color:#fff;background:#87c442;font-size:10px;padding:5px 10px;border-radius:15px;width:13%}
   .codes .card_wrap .card .inner>.regular{font-size:13px;border-bottom:2px solid #000;display:block;}
   .codes .card_wrap .card .inner>.regular>em{background:#000;padding:0 5px;color:#fff;font-size:20px;}
   .codes .card_wrap .card .inner>.shipping_condition{display:block;font-size:12px;}
@@ -252,13 +255,15 @@
   .codes .card_wrap .card .inner>em{display:block;margin-right:5px;font-size:13px;font-weight:400;}
   .codes .card_wrap .card .inner>em>span{font-size:12px;color:#ccc;text-decoration:line-through;margin-left:5px;}
 
-  .codes .card_wrap .card .inner>.code_high{position:relative;}
+  .codes .card_wrap .card .inner>.code_high{position:relative;margin-top:10px;}
   .codes .card_wrap .card .inner>.code_high .extra_info{}
   .codes .card_wrap .card .inner>.code_high>address{display:block;}
   .codes .card_wrap .card .inner>.code_high>address>.dis_price{color:#08f;font-size:25px;margin-right:5px;font-weight:500;}
   .codes .card_wrap .card .inner>.code_high>address>.bestdeals{color:#000;}
   .codes .card_wrap .card .inner>.code_high>address>.ori_price{color:#616161;font-size:15px;text-decoration:line-through;}
-  em.pcou{color:#08f;font-weight:700;}
+  em.pcou{color:#08f;display:block;font-size:12px;margin-top:3px;}
+  em.pcou a{color:#08f;}
+  .dp_tit a{color:#616161;font-size:15px;}
   .codes .card_wrap .card .inner>.code_high>.admin{}
   .codes .card_wrap .card .inner>.code_high>.admin>ul{}
   .codes .card_wrap .card .inner>.code_high>.admin>ul>li{float:left;margin-right:15px;}
@@ -268,23 +273,16 @@
   .codes .card_wrap .card .inner>.code_high .info_wrap .box p{font-size:10px;margin:5px;color:#6d6e71;}
   .codes .card_wrap .card .inner>.code_high .info_wrap .box em{font-size:15px;}
 
-  /*.codes .card_wrap .card .inner>.code_high .toolticommon{display:none;}
-  .codes .card_wrap .card .inner>.code_high .m_toolticommon{display:block;position:relative;display:inline;color:#616161;}
-  .codes .card_wrap .card .inner>.code_high .m_toolticommon:hover .m_tooltip-content{visibility: visible;}
-  .codes .card_wrap .card .inner>.code_high .m_content_common{visibility:hidden;width:355px;padding:7px 7px;color:white;position:absolute;z-index:1;line-height:1.2;}
-  .codes .card_wrap .card .inner>.code_high .m_tooltired .m_tooltip-content{background:#ff4d4d;}
-  .codes .card_wrap .card .inner>.code_high .m_tooltigreen .m_tooltip-content{background:#87c442;}
-  .codes .card_wrap .card .inner>.code_high .m_tooltiorange .m_tooltip-content{background:#e47911;}
-  .codes .card_wrap .card .inner>.code_high .m_tooltipurple .m_tooltip-content{background:#b400b4;}*/
 
   .codes .card_wrap .card .inner>.code_high>ul.exp{}
   .codes .card_wrap .card .inner>.code_high>ul.exp>li{list-style:disc;font-size:11px;color:#616161;display:block;margin-top:3px;}
   .codes .card_wrap .card .inner>.code_high>em{font-size:11px;color:#000;display:block;margin-top:3px;}
-  .codes .card_wrap .card .inner>.code_high>em.expired{background:#ff4d4d;color:#fff;display:inline-block;padding:5px 10px;border-radius:15px;margin:0 0 5px 10px;}
-  .codes .card_wrap .card .inner>.code_high>.endtoday{background:#ffa500;color:#fff;display:inline-block;padding:5px 10px;border-radius:15px;margin:0 0 5px 10px;font-size:11px;}
+  .codes .card_wrap .card .inner>.code_high>em.expired{background:#ff4d4d;color:#fff;display:inline-block;padding:5px 10px;border-radius:15px;margin-top:10px;font-size:10px;}
+  .codes .card_wrap .card .inner>.code_high>.endtoday{background:#ffa500;color:#fff;display:inline-block;padding:5px 10px;border-radius:15px;font-size:10px;margin-top:5px;}
   .codes .card_wrap .card .inner>.code_high>p{display:inline;}
   .codes .card_wrap .card .inner>.code_high .discounted{font-size:25px;margin-right:5px;font-weight:500;display:inline-block;}
   .codes .card_wrap .card .inner>.code_high .ori_price{color:#616161;font-size:15px;text-decoration:line-through;}
+  .codes .card_wrap .card .inner>.code_high span.via{margin:0 5px;}
   .codes .card_wrap .card .inner>.code_high>.mobile_code{display:block;}
   .codes .card_wrap .card .inner>.code_high>p>span{font-weight:400;position:relative;top:0.4em;font-size:10px;}
   .codes .card_wrap .card .inner>.code_high>p>span>strong{font-size:17px;color:#000;font-weight:500;font-size:12px;}
@@ -298,7 +296,7 @@
   .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>a{text-decoration:none;color:#08f;}
   .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>span{}
   .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>span>em{font-size:11px;text-decoration:line-through;color:#616161;margin-left:1%;}
-  .codes .card_wrap .card .deal_btn{float:none;width:100%;margin:0 0 10px 0;text-align:center;}
+  .codes .card_wrap .card .deal_btn{float:none;width:100%;margin:20px 0;text-align:center;}
   .codes .card_wrap .card .deal_btn a{font-size:18px;text-decoration:none;padding:10px 20px;font-family: 'Montserrat', sans-serif;background:#000;color:#fff;display:block;border-radius:5px;}
   .codes .card_wrap .card .deal_btn em{display:none;}
   .codes .card_wrap .card .deal_btn em.stock_m{color:#ff4d4d;text-align:left;margin-left:7px;display:block;margin-bottom:-20px;}
