--- a/app/views/deals/_body_coupon.html.erb
+++ b/app/views/deals/_body_coupon.html.erb
@@ -16,7 +16,7 @@
 </div>
  -->
 
-<div class="card clearfix" data-tags="Coupons"><!--(Coupons or Deals)-->
+<div class="card clearfix" data-tags="Coupons">
   <div class="info_box">
     <a target="_blank" href="https://amzn.to/2GDUFvg">
       <p>70%<br /><em>OFF</em></p>
