--- a/app/views/deals/_navbar_codes.html.erb
+++ b/app/views/deals/_navbar_codes.html.erb
@@ -6,10 +6,10 @@
         <li class="coumos1"><a href="/deals/quicksearch">Amazon Deal Finder</a></li>
         <li><a href="/bargains">Featured Deals</a></li>
         <li>
-          <a class="active" href="/deals/bestdeals">Today's Discovery</a>
+          <a class="active" href="/hotdeals">Today's Discovery</a>
           <ul class="down_sub clearfix">
-            <li><a href="/deals/bestdeals">Deals</a></li>
-            <li><a class="active" href="/deals/promocodes">Codes</a></li>
+            <li><a href="/hotdeals">Deals</a></li>
+            <li><a class="active" href="/promocodes">Coupons</a></li>
           </ul>
         </li>
         <li class="todays_deal"><a target="_blank" href="https://amzn.to/2Q8uWyX">Deal of the Day</a></li>
