--- a/app/views/deals/_navbar_deals.html.erb
+++ b/app/views/deals/_navbar_deals.html.erb
@@ -10,7 +10,7 @@
           <a href="/deals/bestdeals">Today's Discovery</a>
           <ul class="down_sub clearfix">
             <li><a class="active" href="/deals/bestdeals">Deals</a></li>
-            <li><a href="/deals/promocodes">Codes</a></li>
+            <li><a href="/deals/promocodes">Coupons</a></li>
           </ul>
         </li>
         <!-- <li class="more"><a href="/hotdeals">[ More Deals ]</a></li> -->
