--- a/app/views/hotdeals/index.html.erb
+++ b/app/views/hotdeals/index.html.erb
@@ -3,7 +3,7 @@
 <div class="layout"><!--layout-->
   <div class="wrap">  
     <%= render 'shared/header_amazon' %>
-    <%= render 'shared/hotpro_header' %>  
+    <%= render 'hotdeals/navbar' %>  
     <%= render 'shared/botton_amz' %>
 
 
