--- a/app/views/shared/_hotpro_header.html.erb
+++ b/app/views/shared/_hotpro_header.html.erb
@@ -5,10 +5,16 @@
       <ul class="clearfix">
        <li><a href="/deals/quicksearch">Amazon Deal Finder</a></li>
        <li><a href="/bargains">Featured Deals</a></li>
-       <li><a href="/deals/bestdeals">Today's Discovery</a></li>
-       <li><a href="/hotdeals">Deals</a></li>
+       <li>
+          <a class="active" href="/hotdeals">Today's Discovery</a>
+          <ul class="down_sub clearfix">
+            <li><a  class="active"href="/hotdeals">Deals</a></li>
+            <li><a href="/promocodes">Coupons</a></li>
+          </ul>
+        </li>
+       <!-- <li><a href="/hotdeals">Deals</a></li> -->
        <!-- <li class="coumos1 more"><a href="/deals/bestdeals"> [ Daily Deals ]</a></li> -->
-       <li><a href="/promocodes">Coupon Codes</a></li>
+       <!-- <li><a href="/promocodes">Coupon Codes</a></li> -->
        <li class="todays_deal"><a target="_blank" href="https://amzn.to/2Q8uWyX">Deal of the Day</a></li>
        <li class="todays_deal"><a target="_blank" href="https://amzn.to/2IsIyRw">Lightning Deals</a></li>
       </ul>
