--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -9,7 +9,8 @@
 /* Show Page */
 .show_wrap .show_box h2.sd_title{padding:10px 50px;font-size:24px;margin-top:30px;border:2px solid;}
 .show_wrap .show_box .sd_inner{margin-top:10px;}
-.show_wrap .show_box .show_inner a.p_btn{width:300px;text-align:center;}
+.show_wrap .show_box .show_inner .pc_btn{text-align:center;}
+.show_wrap .show_box .show_inner a.p_btn{width:400px;text-align:center;}
 .show_wrap .show_box .show_inner a.store_btn{width:400px;text-align:center;margin:0;border-radius:5px;}
 .show_wrap .show_box .show_inner a.store_btn em{text-transform:uppercase;}
 .show_wrap .show_box .show_inner .hotdeal_inner{}
@@ -27,6 +28,7 @@
 .show_wrap .show_box .show_inner .hotdeal_inner .h_price{font-size:25px;margin-bottom:0;padding:0 5px;}
 .show_wrap .show_box .show_inner .hotdeal_inner .h_price .span_01{color:#616161;text-decoration:line-through;font-size:20px;}
 .show_wrap .show_box .show_inner .hotdeal_inner .h_price .span_02{margin-left:10px;font-size:20px;}
+.show_wrap .show_box .show_inner .hotdeal_inner .h_price .via_show{font-size:13px;margin-left:7px;}
 .show_wrap .show_box .show_inner .hotdeal_inner .h_price em{font-size:13px;}
 .show_wrap .show_box .show_inner .hotdeal_inner .add_line{margin:0 0 10px 0;border:1px dashed #ccc;border-left:0;border-right:0;}
 .show_wrap .show_box .show_inner .hotdeal_inner .add_line ul{margin-left:25px;}
@@ -76,7 +78,7 @@
 @media screen and (max-width:640px){
   .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .box{padding:10px 0;}
   .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .box em{font-size:15px;}
-  .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .box p{font-size:11px;}
+  .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .box p{font-size:10px;}
   .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .box em a.keyword{width:120px;}
   .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .info_box span{margin:0;}
   .show_wrap .show_box .show_inner .hotdeal_inner .info_wrap .box em .end_date{font-size:11px;}
@@ -180,17 +182,17 @@
 .deals_card{float:left;font-family:'Raleway', Arial, sans-serif;position:relative;overflow:hidden;margin:1%;width:23%;background:#fff;text-align:left;color:#000000;box-shadow:0 0 5px rgba(0, 0, 0, 0.15);font-size:16px;-webkit-transform:translateZ(0);transform:translateZ(0);-webkit-perspective:20em;perspective:20em;}
 .deals_card *{-webkit-box-sizing:border-box;box-sizing:border-box;-webkit-transition:all 0.3s ease-out;transition:all 0.3s ease-out;}
 .deals_card .image_box{width:100%;height:250px;padding:25px 25px 10px 25px;position:relative;}
-.deals_card .image_box .mark{position:absolute;top:5px;left:5px;background:#000;color:#fff;width:50px;padding:7px;line-height:1.1;font-size:13px;text-align:center;border-radius:10px;}
-.deals_card .image_box .mark span{letter-spacing:3.1px;}
+.deals_card .image_box .mark{position:absolute;top:5px;left:5px;background:#000;color:#fff;width:60px;height:40px;padding:7px;line-height:1.1;font-size:13px;text-align:center;border-radius:10px;}
+.deals_card .image_box .mark span{letter-spacing:1px;}
 .deals_card .image_box .mark span.wcou_01{font-size:11px;}
-.deals_card .image_box .mark em{display:block;letter-spacing:3.1px;}
+.deals_card .image_box .mark em{display:block;letter-spacing:1px;}
 .deals_card .image_box .mark em.wcoup{font-size:10px;letter-spacing:0.5px;}
 .deals_card .image_box .dropped{top:55px;}
 .deals_card .image_box .dropped em{font-size:10px;}
 .deals_card .image_box .term{width:70px;height:42px;/*background:#ff0000;*/}
 .deals_card .image_box .term p{margin-top:7px;font-size:11px;}
 .deals_card .image_box .exprie{background:#ff4d4d;}
-.deals_card .image_box .endtoday{background:#ffa500;width:50px;position:absolute;top:5px;left:60px;}
+.deals_card .image_box .endtoday{background:#ffa500;width:55px;position:absolute;top:5px;left:52px;}
 .deals_card .image_box .wcoupon{background:#87c442;}
 .deals_card .image_box .wcp{top:50px;}
 .deals_card .image_box .endtoday p{margin:0;height:auto;}
@@ -266,7 +268,7 @@
   .deal_stores figcaption{padding:0px 20px 10px 20px;}
 }
 
-.intheshow{width:300px;margin-top:-10px;}
+.intheshow{width:400px;margin:0 auto;}
 .intheshow_store{width:400px;margin-top:10px;}
 .text_copied_pc{}
 .text_copied_m{display:none;}
