--- a/app/views/promocodes/_form.html.erb
+++ b/app/views/promocodes/_form.html.erb
@@ -7,7 +7,7 @@
     <!-- <%= f.select :p_banner, options_for_select([["Do You Have A Banner?", ""], "YES"])%> -->
     <%= f.select :p_spare_02, options_for_select([["In Stock", ""], "Only in a few stocks left"])%>
     <!-- <%= f.select :p_spare_05, options_for_select([["Subscribe & Save?", ""], "Yes"])%> -->
-    <!-- <%= f.select :p_spare_10, options_for_select([["Free shipping?", ""], "Yes"])%><br /><br /> -->
+    <%= f.select :p_spare_10, options_for_select([["Yes, It's Free shipping", ""], "No, It's not"]) %><br /><br />
     <!-- <%= f.select :p_spare_01, options_for_select([["Ship to Korea", ""], "Yes"])%> -->
     <div class="pricing clearfix">
       <%= f.input :p_spare_26, label: 'List Price' %>
